hot fix for image being pushed to bottom on tablet resize

--- a/src/components/Video/video.scss
+++ b/src/components/Video/video.scss
@@ -20,7 +20,7 @@
         &-tablet {
             width:100%;
             background-color:$black;
-            @include tablet {
+            @include desktop {
                 order:2;
             }
         }
